--- a/casablanca.html
+++ b/casablanca.html
@@ -15,7 +15,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <a class="navbar-brand" href="#"> <img src="images/logo.png" width="54" class="img-fluid"> </a>
+            <a class="navbar-brand" href="index.html"> <img src="images/logo.png" width="54" class="img-fluid"> </a>
           <ul class="navbar-nav mr-auto">
             <li class="nav-item ">
               <a class="nav-link" href="index.html">Home <span class="sr-only"></span></a>
@@ -24,7 +24,7 @@
                 <a class="nav-link" href="movie-list.html">Movie List <span class="sr-only"></span></a>
               </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About Us</a>
+              <a class="nav-link" href="AboutUs.html">About Us</a>
             </li>
           </ul>
         </div>
@@ -76,6 +76,7 @@
                         <ul class="list-unstyled">
                             <li><a href="./index.html">Home</a></li>
                             <li><a href="./movie-list.html">Movie List</a></li>
+                            <li><a href="./AboutUs.html">AboutUs</a></li>
                         </ul>
                     </div>
                     <div class="col-6 col-sm-5">
