--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed top">
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <a class="navbar-brand" href="#"> <img src="images/logo.png" width="54" class="img-fluid"> </a>
+            <a class="navbar-brand" href="index.html"> <img src="images/logo.png" width="54" class="img-fluid"> </a>
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
@@ -33,11 +33,11 @@
                 </li>
             </ul>
             <div class="right">
-            <span class="navbar-text">
-                <a data-toggle="modal" data-target="#loginModal">
-                    <span class="fa fa-sign-in"></span> Login
-                </a>
-            </span>
+                <span class="navbar-text">
+                    <a data-toggle="modal" data-target="#loginModal">
+                        <span class="fa fa-sign-in"></span> Login
+                    </a>
+                </span>
             </div>
         </div>
     </nav>
@@ -50,7 +50,7 @@
                     <button type="button" class="close" data-dismiss="modal">&times</button>
                 </div>
                 <div class="modal-body">
-                    <form method="post"  action="LOGIN.php">
+                    <form method="post" action="LOGIN.php">
                         User Name :<input type="text" name="un">
                         Password:<input type="password" name="pwd">
                         <input type="submit" value="Submit">
@@ -59,7 +59,7 @@
             </div>
         </div>
     </div>
-        <!--LOGOFINAL-->
+    <!--LOGOFINAL-->
     <img src="images/logofinal.jpg" class="center">
     <div class="container">
         <br />
@@ -152,7 +152,8 @@
                         </li>
                     </ul>
                     <form action="INSERT_CUSTOMERS.php" method="POST" target="_blank">
-                    <button style="position:absolute;right:0px;bottom:50px" class="button" type="submit">Reserve</button>
+                        <button style="position:absolute;right:0px;bottom:50px" class="button"
+                            type="submit">Reserve</button>
                     </form>
                 </div>
             </div>
@@ -194,8 +195,9 @@
                         </li>
                     </ul>
                     <form action="INSERT_CUSTOMERS.php" method="POST" target="_blank">
-                        <button style="position:absolute;right:0px;bottom:50px" class="button" type="submit">Reserve</button>
-                        </form>
+                        <button style="position:absolute;right:0px;bottom:50px" class="button"
+                            type="submit">Reserve</button>
+                    </form>
                 </div>
             </div>
         </div>
@@ -235,8 +237,9 @@
                         </li>
                     </ul>
                     <form action="INSERT_CUSTOMERS.php" method="POST" target="_blank">
-                        <button style="position:absolute;right:0px;bottom:50px" class="button" type="submit">Reserve</button>
-                        </form>
+                        <button style="position:absolute;right:0px;bottom:50px" class="button"
+                            type="submit">Reserve</button>
+                    </form>
                 </div>
             </div>
         </div>
@@ -274,8 +277,9 @@
                         </li>
                     </ul>
                     <form action="INSERT_CUSTOMERS.php" method="POST" target="_blank">
-                        <button style="position:absolute;right:0px;bottom:50px" class="button" type="submit">Reserve</button>
-                        </form>
+                        <button style="position:absolute;right:0px;bottom:50px" class="button"
+                            type="submit">Reserve</button>
+                    </form>
                 </div>
             </div>
         </div>
