--- a/movie-list.html
+++ b/movie-list.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <a class="navbar-brand" href="#"> <img src="images/logo.png" width="54" class="img-fluid"> </a>
+          <a class="navbar-brand" href="index.html"> <img src="images/logo.png" width="54" class="img-fluid"> </a>
           <ul class="navbar-nav mr-auto">
             <li class="nav-item ">
               <a class="nav-link" href="index.html">Home <span class="sr-only"></span></a>
